# test_analiz

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  LOCAL_DEVELOPMENT.md  PROJECT_STATUS.md  PYCHARM_SETUP.md  QWEN_CONTEXT.md  QWEN_LOG.md  QWEN_TASKS.md  README.md  SECURITY_AUDIT.md  cleanup_report.md  pyproject.toml  start.bat  start.ps1  stop.bat
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytes.py  auth.py  import_files.py  profiles.py  reports.py
backend/app/core/: analytes_whitelist.py  config.py  security.py  security_middleware.py
backend/app/db/models/: analyte.py  profile.py  report.py  result.py  user.py
backend/app/schemas/: analyte.py  auth.py  import_preview.py  profile.py  report.py  result.py
backend/app/scripts/: add_analytes.py  seed.py
backend/app/services/: analyte_matcher.py
backend/app/services/importers/: __init__.py  pdf_importer.py
frontend/: Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: analytes.ts  auth.ts  client.ts  import.ts  profiles.ts  reports.ts
frontend/src/components/: AnalyteChart.tsx  ErrorLogViewer.tsx  ImportWizard.tsx  Logo.tsx  ProfileSwitcher.tsx  ReportsTable.tsx  ResultsEditor.tsx
(+8 files in other folders)
